fix unity builds

--- a/base/plugins/iscore-lib-device/CMakeLists.txt
+++ b/base/plugins/iscore-lib-device/CMakeLists.txt
@@ -8,7 +8,27 @@ find_package(Qt5 5.3 REQUIRED COMPONENTS Core Widgets Xml)
 
 # Files & main target
 ### Plugin ###
-file(GLOB_RECURSE HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/Device/*.hpp")
+set(HEADERS
+"${CMAKE_CURRENT_SOURCE_DIR}/Device/Address/AddressSettings.hpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/Device/Address/ClipMode.hpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/Device/Address/Domain.hpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/Device/Address/IOType.hpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/Device/ItemModels/NodeBasedItemModel.hpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/Device/ItemModels/NodeDisplayMethods.hpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/Device/Loading/IScoreDeviceLoader.hpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/Device/Loading/JamomaDeviceLoader.hpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/Device/Node/DeviceNode.hpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/Device/Node/NodeListMimeSerialization.hpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/Device/Protocol/DeviceInterface.hpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/Device/Protocol/DeviceList.hpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/Device/Protocol/DeviceSettings.hpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/Device/Protocol/ProtocolFactoryInterface.hpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/Device/Protocol/ProtocolList.hpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/Device/Protocol/ProtocolSettingsWidget.hpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/Device/QMenuView/qmenuview.h"
+"${CMAKE_CURRENT_SOURCE_DIR}/Device/QMenuView/qmenuview_p.h"
+"${CMAKE_CURRENT_SOURCE_DIR}/iscore_lib_device.hpp"
+)
 
 set(SRCS
 "${CMAKE_CURRENT_SOURCE_DIR}/Device/Address/AddressSettingsSerialization.cpp"
