--- a/base/plugins/iscore-plugin-curve/CMakeLists.txt
+++ b/base/plugins/iscore-plugin-curve/CMakeLists.txt
@@ -7,9 +7,55 @@ iscore_common_setup()
 find_package(Qt5 5.3 REQUIRED COMPONENTS Core Widgets)
 
 # Files & main target
-file(GLOB_RECURSE HDRS
-    "${CMAKE_CURRENT_SOURCE_DIR}/Curve/*.hpp"
-)
+set(HDRS
+  "${CMAKE_CURRENT_SOURCE_DIR}/Curve/Commands/CurveCommandFactory.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Curve/Commands/MovePoint.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Curve/Commands/SetSegmentParameters.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Curve/Commands/UpdateCurve.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Curve/CurveModel.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Curve/CurvePresenter.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Curve/CurveStyle.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Curve/CurveView.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Curve/Palette/CommandObjects/CreatePointCommandObject.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Curve/Palette/CommandObjects/CurveCommandObjectBase.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Curve/Palette/CommandObjects/MovePointCommandObject.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Curve/Palette/CommandObjects/MoveSegmentCommandObject.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Curve/Palette/CommandObjects/PenCommandObject.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Curve/Palette/CommandObjects/SetSegmentParametersCommandObject.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Curve/Palette/CurveEditionSettings.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Curve/Palette/CurvePaletteBaseEvents.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Curve/Palette/CurvePaletteBaseStates.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Curve/Palette/CurvePaletteBaseTransitions.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Curve/Palette/CurvePalette.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Curve/Palette/CurvePoint.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Curve/Palette/OngoingState.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Curve/Palette/States/SelectionState.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Curve/Palette/Tools/CurveTool.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Curve/Palette/Tools/MoveTool.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Curve/Palette/Tools/SmartTool.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Curve/Panel/CurvePanel.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Curve/Point/CurvePointModel.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Curve/Point/CurvePointView.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Curve/Process/CurveProcessFactory.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Curve/Process/CurveProcessModel.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Curve/Process/CurveProcessPresenter.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Curve/Segment/CurveSegmentData.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Curve/Segment/CurveSegmentFactory.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Curve/Segment/CurveSegmentList.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Curve/Segment/CurveSegmentModel.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Curve/Segment/CurveSegmentModelSerialization.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Curve/Segment/CurveSegmentView.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Curve/Segment/Linear/LinearSegment.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Curve/Segment/PointArray/PointArraySegment.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Curve/Segment/Power/PowerSegment.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Curve/Segment/Sin/SinSegment.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Curve/Settings/CurveSettingsFactory.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Curve/Settings/CurveSettingsModel.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Curve/Settings/CurveSettingsPresenter.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Curve/Settings/CurveSettingsView.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/iscore_plugin_curve.hpp"
+
+  )
 set(SRCS
 "${CMAKE_CURRENT_SOURCE_DIR}/Curve/Segment/CurveSegmentModelSerialization.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/Curve/Segment/Linear/LinearSegmentSerialization.cpp"
