--- a/base/plugins/iscore-plugin-inspector/CMakeLists.txt
+++ b/base/plugins/iscore-plugin-inspector/CMakeLists.txt
@@ -4,9 +4,14 @@ project(iscore_plugin_inspector LANGUAGES CXX)
 iscore_common_setup()
 
 # Inspector panel plug-in
-file(GLOB_RECURSE PLUGIN_HDRS
-        "${CMAKE_CURRENT_SOURCE_DIR}/InspectorPlugin/*.hpp")
-set(PLUGIN_SRCS
+set(HDRS
+  "${CMAKE_CURRENT_SOURCE_DIR}/InspectorPlugin/iscore_plugin_inspector.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/InspectorPlugin/Panel/Implementation/InspectorPanel.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/InspectorPlugin/Panel/Implementation/SelectionStackWidget.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/InspectorPlugin/Panel/InspectorPanelDelegate.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/InspectorPlugin/Panel/InspectorPanelFactory.hpp"
+  )
+set(SRCS
 "${CMAKE_CURRENT_SOURCE_DIR}/InspectorPlugin/iscore_plugin_inspector.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/InspectorPlugin/Panel/Implementation/SelectionStackWidget.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/InspectorPlugin/Panel/Implementation/InspectorPanel.cpp"
@@ -14,7 +19,7 @@ set(PLUGIN_SRCS
 "${CMAKE_CURRENT_SOURCE_DIR}/InspectorPlugin/Panel/InspectorPanelDelegate.cpp"
 )
 
-add_library(${PROJECT_NAME} ${PLUGIN_HDRS} ${PLUGIN_SRCS})
+add_library(${PROJECT_NAME} ${HDRS} ${SRCS})
 target_link_libraries(${PROJECT_NAME} PUBLIC iscore_lib_inspector)
 
 setup_iscore_plugin(iscore_plugin_inspector)
