--- a/base/plugins/iscore-plugin-loop/CMakeLists.txt
+++ b/base/plugins/iscore-plugin-loop/CMakeLists.txt
@@ -7,8 +7,22 @@ iscore_common_setup()
 find_package(Qt5 5.3 REQUIRED COMPONENTS Core Widgets Qml)
 
 # Files & main target
-file(GLOB_RECURSE HDRS
-    "${CMAKE_CURRENT_SOURCE_DIR}/*.hpp"
+set(HDRS
+  "${CMAKE_CURRENT_SOURCE_DIR}/iscore_plugin_loop.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Loop/Commands/LoopCommandFactory.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Loop/Commands/LoopTriggerCommands.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Loop/Commands/MoveLoopEvent.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Loop/Inspector/LoopInspectorFactory.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Loop/Inspector/LoopInspectorWidget.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Loop/Inspector/LoopTriggerCommandFactory.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Loop/LoopDisplayedElements.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Loop/LoopPresenter.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Loop/LoopProcessFactory.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Loop/LoopProcessMetadata.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Loop/LoopProcessModel.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Loop/LoopView.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Loop/LoopViewUpdater.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Loop/Palette/LoopToolPalette.hpp"
 )
 set(SRCS
     "${CMAKE_CURRENT_SOURCE_DIR}/Loop/LoopProcessModelSerialization.cpp"
@@ -32,6 +46,8 @@ add_library(${PROJECT_NAME} ${SRCS} ${HDRS})
 iscore_generate_command_list_file(${PROJECT_NAME} "${HDRS}")
 target_link_libraries(${PROJECT_NAME} PUBLIC
                      Qt5::Core Qt5::Widgets
-                     iscore_lib_base iscore_lib_process iscore_plugin_scenario iscore_lib_inspector)
+                     iscore_lib_base iscore_lib_process iscore_plugin_scenario
+                     iscore_lib_inspector
+                     )
 
 setup_iscore_plugin(${PROJECT_NAME})
