--- a/base/plugins/iscore-plugin-recording/CMakeLists.txt
+++ b/base/plugins/iscore-plugin-recording/CMakeLists.txt
@@ -10,7 +10,28 @@ iscore_common_setup()
 find_package(Qt5 5.3 REQUIRED COMPONENTS Core Widgets)
 
 # Files & main target
-file(GLOB_RECURSE HDRS "${CMAKE_CURRENT_SOURCE_DIR}/*.hpp")
+set(HDRS
+  "${CMAKE_CURRENT_SOURCE_DIR}/iscore_plugin_recording.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Recording/ApplicationPlugin.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Recording/Commands/Record.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Recording/Commands/RecordingCommandFactory.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Recording/RecordedMessages/Commands/EditMessages.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Recording/RecordedMessages/Commands/RecordedMessagesCommandFactory.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Recording/RecordedMessages/Inspector/RecordedMessagesInspectorFactory.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Recording/RecordedMessages/Inspector/RecordedMessagesInspectorWidget.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Recording/RecordedMessages/RecordedMessagesProcessFactory.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Recording/RecordedMessages/RecordedMessagesProcess.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Recording/RecordedMessages/RecordedMessagesProcessMetadata.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Recording/RecordedMessages/RecordedMessagesProcessModel.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Recording/Record/RecordAutomations/RecordAutomationCreationVisitor.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Recording/Record/RecordAutomations/RecordAutomationFirstParameterCallbackVisitor.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Recording/Record/RecordAutomations/RecordAutomationParameterCallbackVisitor.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Recording/Record/RecordData.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Recording/Record/RecordManager.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Recording/Record/RecordMessagesManager.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Recording/Record/RecordProviderFactory.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Recording/Record/RecordTools.hpp"
+)
 set(SRCS
 
 "${CMAKE_CURRENT_SOURCE_DIR}/Recording/RecordedMessages/RecordedMessagesProcess.cpp"
