--- a/base/plugins/iscore-plugin-deviceexplorer/CMakeLists.txt
+++ b/base/plugins/iscore-plugin-deviceexplorer/CMakeLists.txt
@@ -8,7 +8,7 @@ find_package(Qt5 5.3 REQUIRED COMPONENTS Core Widgets Test Xml)
 
 # Files & main target
 ### Plugin ###
-file(GLOB_RECURSE HDRS
+set(HDRS
     "${CMAKE_CURRENT_SOURCE_DIR}/Explorer/Commands/Add/AddAddress.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/Explorer/Commands/Add/AddDevice.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/Explorer/Commands/Add/LoadDevice.hpp"
