fix windows exe

--- a/base/player/CMakeLists.txt
+++ b/base/player/CMakeLists.txt
@@ -6,11 +6,15 @@ enable_testing()
 set(CMAKE_AUTOMOC ON)
 find_package(Qt5 5.7 COMPONENTS QuickControls2)
 
-add_library(iscore_player
+add_library(iscore_player SHARED
   "${CMAKE_CURRENT_SOURCE_DIR}/player_impl.hpp"
   "${CMAKE_CURRENT_SOURCE_DIR}/player.hpp"
   "${CMAKE_CURRENT_SOURCE_DIR}/player.cpp")
-target_link_libraries(iscore_player PUBLIC iscore_lib_base iscore_plugin_scenario iscore_plugin_engine Qt5::QuickControls2)
+target_link_libraries(iscore_player PUBLIC
+  iscore_lib_base iscore_plugin_scenario iscore_plugin_engine
+  iscore_plugin_pluginsettings iscore_plugin_inspector iscore_plugin_js
+  iscore_plugin_midi iscore_plugin_recording
+  Qt5::QuickControls2)
 
 add_executable(player "${CMAKE_CURRENT_SOURCE_DIR}/main.cpp")
 target_link_libraries(player PUBLIC iscore_player)
