--- a/CMake/Deployment/Linux/i-score.desktop.in
+++ b/CMake/Deployment/Linux/i-score.desktop.in
@@ -3,7 +3,7 @@ Type=Application
 Version=${ISCORE_VERSION}
 Name=i-score
 Comment=An interactive sequencer for the intermedia arts
-Exec=i-score.sh
+Exec=i-score
 Icon=i-score
 Terminal=false
 Categories=Sound
