network player operational

--- a/base/player/CMakeLists.txt
+++ b/base/player/CMakeLists.txt
@@ -27,6 +27,9 @@ target_link_libraries(player PUBLIC iscore_player)
 add_executable(player_device "${CMAKE_CURRENT_SOURCE_DIR}/device_example.cpp")
 target_link_libraries(player_device PUBLIC iscore_player)
 
+add_executable(player_network "${CMAKE_CURRENT_SOURCE_DIR}/network_example.cpp")
+target_link_libraries(player_network PUBLIC iscore_player)
+
 if(ISCORE_STATIC_PLUGINS)
   iscore_write_static_plugins_header()
 endif()
@@ -34,3 +37,4 @@ endif()
 setup_iscore_common_lib_features(iscore_player)
 setup_iscore_common_exe_features(player)
 setup_iscore_common_exe_features(player_device)
+setup_iscore_common_exe_features(player_network)
