First commit of i-score Pd object

--- a/base/player/CMakeLists.txt
+++ b/base/player/CMakeLists.txt
@@ -6,6 +6,13 @@ enable_testing()
 set(CMAKE_AUTOMOC ON)
 find_package(Qt5 5.7 COMPONENTS QuickControls2)
 
+option(ISCORE_PLAYER_PD "Build player object for PD" OFF)
+option(ISCORE_PLAYER_MAX "Build player object for Max" OFF)
+
+if(ISCORE_PLAYER_PD)
+  add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/i-score-pd")
+endif()
+
 add_library(iscore_player
   "${CMAKE_CURRENT_SOURCE_DIR}/player_impl.hpp"
   "${CMAKE_CURRENT_SOURCE_DIR}/player.hpp"
