--- a/base/plugins/iscore-plugin-scenario/CMakeLists.txt
+++ b/base/plugins/iscore-plugin-scenario/CMakeLists.txt
@@ -169,6 +169,7 @@ set(HDRS
   "${CMAKE_CURRENT_SOURCE_DIR}/Scenario/Document/Event/EventPresenter.hpp"
   "${CMAKE_CURRENT_SOURCE_DIR}/Scenario/Document/Event/EventView.hpp"
   "${CMAKE_CURRENT_SOURCE_DIR}/Scenario/Document/Event/ExecutionStatus.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Scenario/Document/Minimap/Minimap.hpp"
   "${CMAKE_CURRENT_SOURCE_DIR}/Scenario/Document/Graph.hpp"
   "${CMAKE_CURRENT_SOURCE_DIR}/Scenario/Document/ModelConsistency.hpp"
   "${CMAKE_CURRENT_SOURCE_DIR}/Scenario/Document/ScenarioDocument/ProcessFocusManager.hpp"
@@ -467,6 +468,7 @@ set(SRCS ${SRCS}
 "${CMAKE_CURRENT_SOURCE_DIR}/Scenario/Document/Event/EventView.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/Scenario/Document/Event/ExecutionStatus.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/Scenario/Document/ModelConsistency.cpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/Scenario/Document/Minimap/Minimap.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/Scenario/Document/TimeNode/TimeNodeModel.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/Scenario/Document/TimeNode/TimeNodePresenter.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/Scenario/Document/TimeNode/TimeNodeView.cpp"
