minimap should be ok

--- a/base/plugins/iscore-plugin-scenario/CMakeLists.txt
+++ b/base/plugins/iscore-plugin-scenario/CMakeLists.txt
@@ -290,6 +290,7 @@ set(HDRS
   "${CMAKE_CURRENT_SOURCE_DIR}/Scenario/Process/Temporal/ScenarioViewInterface.hpp"
   "${CMAKE_CURRENT_SOURCE_DIR}/Scenario/Process/Temporal/TemporalScenarioPresenter.hpp"
   "${CMAKE_CURRENT_SOURCE_DIR}/Scenario/Process/Temporal/TemporalScenarioView.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Scenario/Process/Temporal/MiniScenarioView.hpp"
   "${CMAKE_CURRENT_SOURCE_DIR}/Scenario/Settings/ScenarioSettingsFactory.hpp"
   "${CMAKE_CURRENT_SOURCE_DIR}/Scenario/Settings/ScenarioSettingsModel.hpp"
   "${CMAKE_CURRENT_SOURCE_DIR}/Scenario/Settings/ScenarioSettingsPresenter.hpp"
@@ -506,6 +507,7 @@ set(SRCS ${SRCS}
 "${CMAKE_CURRENT_SOURCE_DIR}/Scenario/Palette/Transitions/SlotTransitions.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/Scenario/Palette/ScenarioPalette.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/Scenario/Process/Temporal/TemporalScenarioView.cpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/Scenario/Process/Temporal/MiniScenarioView.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/Scenario/Process/Temporal/ScenarioViewInterface.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/Scenario/Process/Temporal/TemporalScenarioPresenter.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/Scenario/Process/ScenarioGlobalCommandManager.cpp"
