start work on spline

--- a/base/plugins/iscore-plugin-automation/CMakeLists.txt
+++ b/base/plugins/iscore-plugin-automation/CMakeLists.txt
@@ -13,10 +13,17 @@ set(HDRS
   "${CMAKE_CURRENT_SOURCE_DIR}/Automation/AutomationPresenter.hpp"
   "${CMAKE_CURRENT_SOURCE_DIR}/Automation/AutomationProcessMetadata.hpp"
   "${CMAKE_CURRENT_SOURCE_DIR}/Automation/AutomationView.hpp"
+
   "${CMAKE_CURRENT_SOURCE_DIR}/Automation/Color/GradientAutomModel.hpp"
   "${CMAKE_CURRENT_SOURCE_DIR}/Automation/Color/GradientAutomPresenter.hpp"
   "${CMAKE_CURRENT_SOURCE_DIR}/Automation/Color/GradientAutomView.hpp"
   "${CMAKE_CURRENT_SOURCE_DIR}/Automation/Color/GradientAutomMetadata.hpp"
+
+  "${CMAKE_CURRENT_SOURCE_DIR}/Automation/Spline/SplineAutomModel.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Automation/Spline/SplineAutomPresenter.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Automation/Spline/SplineAutomView.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Automation/Spline/SplineAutomMetadata.hpp"
+
   "${CMAKE_CURRENT_SOURCE_DIR}/Automation/Commands/AutomationCommandFactory.hpp"
   "${CMAKE_CURRENT_SOURCE_DIR}/Automation/Commands/ChangeAddress.hpp"
   "${CMAKE_CURRENT_SOURCE_DIR}/Automation/Commands/InitAutomation.hpp"
@@ -40,6 +47,10 @@ set(SRCS
 "${CMAKE_CURRENT_SOURCE_DIR}/Automation/Color/GradientAutomModel.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/Automation/Color/GradientAutomPresenter.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/Automation/Color/GradientAutomView.cpp"
+
+"${CMAKE_CURRENT_SOURCE_DIR}/Automation/Spline/SplineAutomModel.cpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/Automation/Spline/SplineAutomPresenter.cpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/Automation/Spline/SplineAutomView.cpp"
 
 "${CMAKE_CURRENT_SOURCE_DIR}/Automation/Commands/InitAutomation.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/Automation/Commands/ChangeAddress.cpp"
